feat: added a hero section in index.html, styled the css of the hero section, and added bg.mp4

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li class="active"><a href="/index.html">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">ABOUT ME</a></li>
                 <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
@@ -22,5 +22,15 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <video autoplay muted loop id="heroVideo">
+            <source src="assets/vid/bg.mp4" type="video/mp4">
+        </video>
+        <div class="hero-content">
+            <h1>WELCOME!</h1>
+            <p>This is my Final Project for Web Design, made by Xylon Nicholas N. Santos - TW04</p>
+        </div>
+    </section>
 </body>
 </html>
