--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li class="active"><a href="/index.html">HOME</a></li>
-                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="pages/About Me/index.html">ABOUT ME</a></li>
                 <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
