feat: developed the projects page, updated the index.html, styled the css, added bg.mp4

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li class="active"><a href="/index.html">HOME</a></li>
                 <li><a href="pages/About Me/index.html">ABOUT ME</a></li>
-                <li><a href="#">PROJECTS</a></li>
+                <li><a href="pages/Projects/index.html">PROJECTS</a></li>
                 <li><a href="#">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
