--- a/pages/About Me/index.html
+++ b/pages/About Me/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li class="active"><a href="#">ABOUT ME</a></li>
-                <li><a href="#">PROJECTS</a></li>
+                <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
                 <li><a href="#">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
