feat: added a new feature in index.html which is the overview section, also updated style.css, index.html, added HeaderLogo.png, bg.mp4

--- a/pages/About Me/index.html
+++ b/pages/About Me/index.html
@@ -17,7 +17,7 @@
                 <li><a href="/index.html">HOME</a></li>
                 <li class="active"><a href="#">ABOUT ME</a></li>
                 <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
-                <li><a href="#">OVERVIEW</a></li>
+                <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
