--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="active"><a href="/index.html">HOME</a></li>
                 <li><a href="pages/About Me/index.html">ABOUT ME</a></li>
                 <li><a href="pages/Projects/index.html">PROJECTS</a></li>
-                <li><a href="#">OVERVIEW</a></li>
+                <li><a href="pages/Overview/index.html">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
