--- a/pages/Projects/index.html
+++ b/pages/Projects/index.html
@@ -13,7 +13,7 @@
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/pages/About Me/index.html">ABOUT ME</a></li>
                 <li class="active"><a href="#">PROJECTS</a></li>
-                <li><a href="#">OVERVIEW</a></li>
+                <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
                 <li><a href="#">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
