feat: added a gallery section wherein it displays a screenshot of the past projects, title, short description, and the deployment link, updated the css styling, added 1,2,3,4,5,6,7,HeaderLogo pngs, updated index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </div>
         <nav>
             <ul>
-                <li class="active"><a href="/index.html">HOME</a></li>
+                <li class="active"><a href="#">HOME</a></li>
                 <li><a href="pages/About Me/index.html">ABOUT ME</a></li>
                 <li><a href="pages/Projects/index.html">PROJECTS</a></li>
                 <li><a href="pages/Overview/index.html">OVERVIEW</a></li>
-                <li><a href="#">GALLERY</a></li>
+                <li><a href="pages/Gallery/index.html">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
