--- a/pages/About Me/index.html
+++ b/pages/About Me/index.html
@@ -18,7 +18,7 @@
                 <li class="active"><a href="#">ABOUT ME</a></li>
                 <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
                 <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
-                <li><a href="#">GALLERY</a></li>
+                <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
@@ -37,8 +37,8 @@
                     <li>Communication Skills</li>
                     <li>Critical Thinking Skills</li>
                     <li>Problem Solving Skills</li>
-                    <li>Adaptability</li>
                     <li>Collaboration Skills</li>
+                    <li>Adaptability</li>
                 </ul>
 
                 <h2>Experience</h2>
