--- a/pages/Overview/index.html
+++ b/pages/Overview/index.html
@@ -28,7 +28,7 @@
             <source src="assets/vid/bg.mp4" type="video/mp4">
         </video>
         <div class="container">
-            <h2>Thank You for visiting my website!</h2>
+            <h2>OVERVIEW</h2>
             <p>This website consists of a Home Page, About Me page, Projects page, the overview, Gallery page, and the contacts.</p>
             <p>The purpose of this website is to showcase my design skills and web development knowledge. It will serve as a portfolio showcasing my skills and past projects.</p>
         </div>
