--- a/pages/Projects/index.html
+++ b/pages/Projects/index.html
@@ -14,7 +14,7 @@
                 <li><a href="/pages/About Me/index.html">ABOUT ME</a></li>
                 <li class="active"><a href="#">PROJECTS</a></li>
                 <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
-                <li><a href="#">GALLERY</a></li>
+                <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
@@ -50,13 +50,18 @@
             </div>
             <div class="feature-card">
                 <h3>WD-Seatwork3</h3>
-                <p>This project consists of Header Gallery (5 static 5 animated) and Footer Gallery (5 static 5 animated).</p>
+                <p>This project consists of Header Gallery (5 static and 5 animated) and Footer Gallery (5 static and 5 animated).</p>
                 <a href="https://github.com/XylonSantos/WD-Seatwork3" target="_blank">Repository Link</a>
             </div>
             <div class="feature-card">
                 <h3>WD-Seatwork4</h3>
                 <p>This project consists of 2 Features Page.</p>
                 <a href="https://github.com/XylonSantos/WD-Seatwork4" target="_blank">Repository Link</a>
+            </div>
+            <div class="feature-card">
+                <h3>WD-Finals</h3>
+                <p>Final Project and a compilation of all my past projects.</p>
+                <a href="https://github.com/XylonSantos/WD-Finals" target="_blank">Repository Link</a>
             </div>
         </div>
     </section>
