feat: added a contacts section wherein it displays a picture of me, and the links of my social media accounts and other important profiles, updated index.html, styled the css of contacts, added bg.jpg, HeaderLogo.png

--- a/pages/Gallery/index.html
+++ b/pages/Gallery/index.html
@@ -18,7 +18,7 @@
                 <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
                 <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
                 <li class="active"><a href="#">GALLERY</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="/pages/Contact/index.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
