--- a/pages/About Me/index.html
+++ b/pages/About Me/index.html
@@ -19,7 +19,7 @@
                 <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
                 <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
                 <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="/pages/Contact/index.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
