--- a/pages/Projects/index.html
+++ b/pages/Projects/index.html
@@ -15,7 +15,7 @@
                 <li class="active"><a href="#">PROJECTS</a></li>
                 <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
                 <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="/pages/Contact/index.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
