--- a/pages/Overview/index.html
+++ b/pages/Overview/index.html
@@ -17,8 +17,8 @@
                 <li><a href="/pages/About Me/index.html">ABOUT ME</a></li>
                 <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
                 <li class="active"><a href="#">OVERVIEW</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
+                <li><a href="/pages/Contact/index.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
