fix: navigation links

--- a/pages/Contact/index.html
+++ b/pages/Contact/index.html
@@ -14,11 +14,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/pages/About Me/index.html">ABOUT ME</a></li>
-                <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
-                <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
-                <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
+                <li><a href="../../index.html">HOME</a></li>
+                <li><a href="../About Me/index.html">ABOUT ME</a></li>
+                <li><a href="../Projects/index.html">PROJECTS</a></li>
+                <li><a href="../Overview/index.html">OVERVIEW</a></li>
+                <li><a href="../Gallery/index.html">GALLERY</a></li>
                 <li class="active"><a href="#">CONTACT</a></li>
             </ul>
         </nav>
