--- a/pages/Overview/index.html
+++ b/pages/Overview/index.html
@@ -13,12 +13,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/pages/About Me/index.html">ABOUT ME</a></li>
-                <li><a href="/pages/Projects/index.html">PROJECTS</a></li>
+                <li><a href="../../index.html">HOME</a></li>
+                <li><a href="../About Me/index.html">ABOUT ME</a></li>
+                <li><a href="../Projects/index.html">PROJECTS</a></li>
                 <li class="active"><a href="#">OVERVIEW</a></li>
-                <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
-                <li><a href="/pages/Contact/index.html">CONTACT</a></li>
+                <li><a href="../Gallery/index.html">GALLERY</a></li>
+                <li><a href="../Contact/index.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
