--- a/pages/Projects/index.html
+++ b/pages/Projects/index.html
@@ -10,12 +10,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/pages/About Me/index.html">ABOUT ME</a></li>
+                <li><a href="../../index.html">HOME</a></li>
+                <li><a href="../About Me/index.html">ABOUT ME</a></li>
                 <li class="active"><a href="#">PROJECTS</a></li>
-                <li><a href="/pages/Overview/index.html">OVERVIEW</a></li>
-                <li><a href="/pages/Gallery/index.html">GALLERY</a></li>
-                <li><a href="/pages/Contact/index.html">CONTACT</a></li>
+                <li><a href="../Overview/index.html">OVERVIEW</a></li>
+                <li><a href="../Gallery/index.html">GALLERY</a></li>
+                <li><a href="../Contact/index.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
