feat: added the link of the deployment link for the Final Project

--- a/pages/Gallery/index.html
+++ b/pages/Gallery/index.html
@@ -85,7 +85,7 @@
             <div class="project-info">
                 <h3>WD-Finals</h3>
                 <p>THE FINAL PROJECT</p>
-                <a href="#" class="btn">View Deployment</a>
+                <a href="https://xylonsantos.github.io/WD-Finals/" class="btn">View Deployment</a>
             </div>
         </div>
 
